HW17/refactoring, servlet, adapt for java 8 compiler